--- a/src/public/main.css
+++ b/src/public/main.css
@@ -54,3 +54,21 @@
 .imgPreview:hover .close {
 	opacity: 1;
 }
+
+.heart {
+    fill: white;
+    top: 5px;
+    width: 50px;
+    animation: pulse 1.25s ease infinite;
+
+    display: none;
+    position: absolute;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+  }
+  
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.3); }
+    100% { transform: scale(1); }
+  }
