--- a/src/public/main.css
+++ b/src/public/main.css
@@ -72,3 +72,13 @@
     50% { transform: scale(1.3); }
     100% { transform: scale(1); }
   }
+
+  .heart2{
+    stroke: #060606;
+    stroke-width: 1px;
+    stroke-opacity: 1.8;
+    display: inline;
+    fill: white;
+    top: 5px;
+    width: 21px;
+  }
